# android_backcountry_webcam

./: .gitmodules  README.build.md  README.gwicke.md  README.md  TODO.md  build.gradle  settings.gradle  todo.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  av1enc_jni.c
app/src/main/java/com/camerauploader/: AlarmReceiver.kt  AlarmScheduler.kt  Av1Encoder.kt  Av1Streamer.kt  BootReceiver.kt  CameraBridgeActivity.kt  CameraUploaderService.kt  CameraUploaderServiceV2.kt  CameraUploaderWorker.kt  MainActivity.kt  ResolutionHelper.kt  SettingsManager.kt  Yuv420Converter.kt
app/src/main/res/drawable/: ic_launcher.xml
app/src/main/res/values/: strings.xml  themes.xml
